@@ -5,7 +5,7 @@ from . import parser
 from .grf import *
 from .constants import *
 from .vox import VoxReader, VoxFile, VoxTrainFile
-from .sprites import RealSprite, GraphicsSprite, ImageSprite, ImageFile, FileSprite, SoundSprite, RAWSound, PaletteRemap, EMPTY_SPRITE, open_image, find_best_color, fix_palette
+from .sprites import RealSprite, GraphicsSprite, ImageSprite, ImageFile, FileSprite, Mask, FileMask, ImageMask, SoundSprite, RAWSound, PaletteRemap, EMPTY_SPRITE, open_image, find_best_color, fix_palette
 from .common import *
 from .actions import RVFlags, TrainFlags, CargoClass, train_hpi, train_ton, \
     nml_te, nml_drag, py_property, SpriteRef, SpriteLayout, SpriteLayoutList, \
